cmake_minimum_required(VERSION 3.5.1)
project(stl)
set(CMAKE_CXX_STANDARD 11)
option(DEBUG "build for debug" ON)
if (DEBUG)
  set(CMAKE_BUILD_TYPE "Debug")
  add_definitions(-DSTL_DEBUG)
else()
  set(CMAKE_BUILD_TYPE "Release")
endif()
include_directories(${CMAKE_SOURCE_DIR}/include)
set(STL_LINKER_LIBS gtest pthread glog)
file(GLOB_RECURSE stl_srcs ${CMAKE_SOURCE_DIR}/src/*.cc)
add_library(stl SHARED ${stl_srcs})
list(APPEND STL_LINKER_LIBS stl)
add_subdirectory(${CMAKE_SOURCE_DIR}/test)
